# medicine-chatbot-kcb

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  pytest.ini  test.py  verify_db.py  verify_rag.py
api/: main.py
api/routers/: chat.py  conversations.py  title.py
api/routes/: chat.py  conversations.py  title.py
api/schemas/: __init__.py  chat.py  conversations.py  request.py  response.py  title.py
data_pipeline/: run_workflow.py  transform_json_pinecone.py  update_pinecone.py
db/: __init__.py  vector_store.py
db/postgre/: __init__.py  crud.py  db_store.py  models.py
evaluate/: build_dataset.py  evaluate_ragas.py  get_results.py
evaluate/datasets/: test_data.csv
evaluate/experiments/: practical_huffman.csv
files/: convert_filename.py  get_mapping.py  mapping.json  update_vectordb.py
src/: chains.py  prompts.py  services.py  tools.py  utils.py
src/embeddings/: __init__.py  openai_embed.py
src/llms/: __init__.py  openai_llm.py
tests/integration/: conftest.py  test_services.py  test_tools.py
tests/integration/api/: test_chat.py  test_conversations.py  test_title.py
tests/unit/: conftest.py  test_chat.py  test_conversations.py  test_services.py  test_title.py  test_tools.py  test_utils.py
tests/unit/api/: test_chat.py  test_conversations.py  test_title.py
