[project]
name = "chatbot-kcb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-pinecone>=0.2.13",
    "openai>=2.24.0",
    "pinecone-client>=6.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]
