[project]
name = "medicine-chatbot-kcb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-pinecone>=0.2.13",
    "langsmith>=0.7.16",
    "openai>=2.24.0",
    "pandas>=3.0.2",
    "pinecone>=7.3.0",
    "psycopg2>=2.9.11",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.6.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "respx>=0.23.1",
    "sqlalchemy>=2.0.48",
    "testcontainers>=4.14.2",
    "uvicorn>=0.41.0",
]
